--- a/Test.ArchiTest/Test.ArchiTest.csproj
+++ b/Test.ArchiTest/Test.ArchiTest.csproj
@@ -7,6 +7,7 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <Version>0.1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
